fix : fix chat spacing issue

--- a/src/features/chat/components/chat-container/styles/chat-container.css
+++ b/src/features/chat/components/chat-container/styles/chat-container.css
@@ -80,7 +80,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     gap: 1.75rem; /* gap-7 */
     padding: 1.5rem; /* p-6 */
     width: 100%;
